Tests/Error/Types/.build/throwusererror.pr
{
  "name": "ThrowUserError",
  "description": "Throws an error with message \u0022user error\u0022 and key \u0022TestKey\u0022.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022user error\u0022 key=\u0022TestKey\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "user error",
              "type": "string"
            },
            {
              "name": "Key",
              "value": "TestKey",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/Types/ThrowUserError.goal",
  "prPath": "/Error/Types/.build/throwusererror.pr",
  "hash": "ea9ddd08e494e52118b430af4ba6e52104efe7321bf5bbfd891ce7101fb8c920",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}